added a temp. session dependency

--- a/Ocular/webapp-django/django/templates/login_only.html
+++ b/Ocular/webapp-django/django/templates/login_only.html
@@ -16,9 +16,9 @@
                 <span class="loader"></span>
               </header>
               <form action="/app/login_only_redirect/" class="form">
-                <input class="input1" name="username" type="username", placeholder="Username" style="font-size: 2rem;">
+                <input class="input1" name="Username" type="username", placeholder="Username" style="font-size: 2rem;">
                 <br>
-                <input class="input1" name="password" type="password", placeholder="Password" style="font-size: 2rem;">
+                <input class="input1" name="Password" type="password", placeholder="Password" style="font-size: 2rem;">
                 <br>
                 <button type="submit" class="btn btn-primary btn-lg btn-ada"> Log In</button>
               </form>
