--- a/Ocular/webapp-django/django/templates/notifyform.html
+++ b/Ocular/webapp-django/django/templates/notifyform.html
@@ -44,7 +44,7 @@
 <ul class="menu">
   <li><a href="/app/home/" class="active">Home</a></li>
   <li><a href="#">History</a></li>
-  <li><a href="/app/home/">Log Out</a></li>
+  <li><a href="/app/logout/">Log Out</a></li>
   <li><a href="#"></a></li>
   <li class="slider"></li>
 </ul>
