--- a/Ocular/webapp-django/django/templates/dashboard.html
+++ b/Ocular/webapp-django/django/templates/dashboard.html
@@ -13,7 +13,7 @@
 <ul class="menu">
     <li><a href="/app/home" class="active">Home</a></li>
     <li><a href="#">History</a></li>
-    <li><a href="/app/home/">Log Out</a></li>
+    <li><a href="/app/logout/">Log Out</a></li>
     <li><a>Welcome : {{ user }}</a></li>
     <li class="slider"></li>
 </ul>
