--- a/Ocular/webapp-django/django/templates/diagnosis_registered.html
+++ b/Ocular/webapp-django/django/templates/diagnosis_registered.html
@@ -11,7 +11,7 @@
 </head>
 <body>
         <ul class="menu">
-                <li><a href="#">History</a></li>
+                <li><a href="/app/history/">History</a></li>
                 <li><a href="/app/logout/">Log Out</a></li>
                 <li class="slider"></li>
         </ul>
