--- a/Ocular/webapp-django/django/templates/diagnosis_registered.html
+++ b/Ocular/webapp-django/django/templates/diagnosis_registered.html
@@ -17,19 +17,37 @@
         </ul>
 
         <div class="container">
-                <div class="leftpane">
+                <div style="width: 33%;
+      top:100px;
+      height: 100%;
+      float: left;
+      background-color: rosybrown;
+      border-collapse: collapse;">
                 <form action="/app/camera/cataract_login/">
-                  <button class="Clickers" id="Button1">Catract</button>
+                  <button style="padding: 47%;
+    padding-bottom: 100%;" id="Button1">Catract</button>
               </form>
                 </div>
-                <div class="middlepane">
+                <div style="width: 33%;
+      top:100px;
+      height: 100%;
+      float: left;
+      background-color: royalblue;
+      border-collapse: collapse;">
                     <form action="/app/camera/bilirubin_login/">
-                    <button class="Clickers" id="Button2">Bilirubin</button>
+                    <button style="padding: 47%;
+    padding-bottom: 100%;" id="Button2">Bilirubin</button>
                 </form>
                 </div>
-                <div class="rightpane">
+                <div style="width: 33%;
+    top:100px;
+    height: 100%;
+    float: right;
+    background-color: yellow;
+    border-collapse: collapse;">
                     <form action="/app/camera/cholesterol_login/">
-                  <button class="Clickers" id="Button3">Colestrol</button>
+                  <button style="padding: 47%;
+    padding-bottom: 100%;" id="Button3">Colestrol</button>
               </form>
                 </div>
               </div>
@@ -38,43 +56,6 @@
 </html>
 
 <style type="text/css">
-      .container {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .leftpane {
-      width: 33%;
-      top:100px;
-      height: 100%;
-      float: left;
-      background-color: rosybrown;
-      border-collapse: collapse;
-  }
-  
-  .middlepane {
-      width: 33%;
-      top:100px;
-      height: 100%;
-      float: left;
-      background-color: royalblue;
-      border-collapse: collapse;
-  }
-  
-  .rightpane {
-    width: 33%;
-    top:100px;
-    height: 100%;
-    float: right;
-    background-color: yellow;
-    border-collapse: collapse;
-  }
-  
-  .Clickers{
-    padding: 47%;
-    padding-bottom: 100%;
-    /* margin: 100%; */
-}
 
 #button1:hover,#button2:hover,#button3:hover{
     
