--- a/Ocular/webapp-django/django/templates/dashboard.html
+++ b/Ocular/webapp-django/django/templates/dashboard.html
@@ -19,7 +19,9 @@
 </ul>
 
 <div id="div1">
-    <button class="Clickers edit" id="button1" onclick="alert('Under development!')"><h1>General Diagnostics</h1></button>
+    <form action="/app/gen_diagnosis/" class="edit">
+        <button class="Clickers edit" id="button1"><h1>General Diagnostics</h1></button>
+    </form>
 </div>
 
 <div id="div2">
