--- a/Ocular/webapp-django/django/templates/gen_diagnosis.html
+++ b/Ocular/webapp-django/django/templates/gen_diagnosis.html
@@ -27,7 +27,7 @@
         {% if flag != 0 %}
         <div>
           {% if flag2 == 1 %}
-          <p> Symptom: <b> {{ element }}</b> <br> You have deficiency of <b> {{ deficiency }} </b>. <br> Kindly increase intake of the following food/s: <i>{{ food }}</i>.</p>
+          <p> Related Symptom/s: <b> {{ element }}</b> <br> You have deficiency of <b> {{ deficiency }} </b>. <br> Kindly increase intake of the following food/s: <i>{{ food }}</i>.</p>
           {% else %}
           <p> Symptom: <b> {{ element }}</b> <br> Invalid search element, try another keyword.</p>
           {% endif %}
