--- a/Ocular/webapp-django/django/templates/contact.html
+++ b/Ocular/webapp-django/django/templates/contact.html
@@ -23,7 +23,7 @@
                 <input class="input" name="Username" type="text", placeholder="Your E-Mail ID">
                 <input class="input" name="Username" type="text", placeholder="Your Message">
                 <input class="input" name="Password" type="password" placeholder="Your Organisation">
-                <button class="btn btn-primary btn-lg" type="submit" style="margin-top: 10%; margin-left: 25%"> Login </button>
+                <button class="btn btn-primary btn-lg" type="submit" style="margin-top: 10%; margin-left: 25%"> Connect </button>
         </form>
     </div>
 </body>
