added find a doctor

--- a/Ocular/webapp-django/django/templates/dashboard.html
+++ b/Ocular/webapp-django/django/templates/dashboard.html
@@ -37,7 +37,9 @@
 </div>
 
 <div id="div4">
-    <button class="Clickers edit" id="button4" onclick="alert('Under development!')"><h1>Consult with a doctor</h1></button>
+    <form action="/app/finddoctors/" class="edit">
+        <button class="Clickers edit" id="button4"><h1>Consult with a doctor</h1></button>
+    </form>
 </div>
 
         
