--- a/Ocular/webapp-django/django/templates/gen_diagnosis.html
+++ b/Ocular/webapp-django/django/templates/gen_diagnosis.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Direct Test</title>
+    <title>General Diagnosis</title>
     <link rel="stylesheet" href="{% static 'css/direct_text.css' %}">
 </head>
 <body>
