improved result page

--- a/Ocular/webapp-django/django/templates/dashboard.html
+++ b/Ocular/webapp-django/django/templates/dashboard.html
@@ -25,7 +25,7 @@
 </div>
 
 <div id="div2">
-    <form action="/app/diagnosis_registered/" class="edit">
+    <form action="/app/diagnosis_option/" class="edit">
     <button class="Clickers edit" id="button2"><h1>Special Diagnostics</h1></button>
     </form>
 </div>
