--- a/Ocular/webapp-django/django/templates/search-form.html
+++ b/Ocular/webapp-django/django/templates/search-form.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Home</title>
+  <title>OCULAR | Home</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
 
 
@@ -66,7 +66,7 @@
     <br>
     <br>
     <form action="/app/aadhar2/" class="form">
-    <button class="btn btn-primary btn-lg btn-ada" style="top:60%" type="submit" onclick="alert('We do not misuse your information. Kindly proceed freely.')">Camera</button>
+    <button class="btn btn-primary btn-lg btn-ada" style="top:60%" type="submit" onclick="alert('We do not misuse your information. Proceed freely.')">Camera</button>
   </form>
 </div>
 
