added visual results

--- a/Ocular/webapp-django/django/templates/diagnosis_registered.html
+++ b/Ocular/webapp-django/django/templates/diagnosis_registered.html
@@ -47,7 +47,7 @@
     border-collapse: collapse;">
                     <form action="/app/camera/cholesterol_login/">
                   <button style="padding: 47%;
-    padding-bottom: 100%;" id="Button3">Colestrol</button>
+    padding-bottom: 100%;" id="Button3">Cholesterol</button>
               </form>
                 </div>
               </div>
