--- a/Ocular/webapp-django/django/templates/about.html
+++ b/Ocular/webapp-django/django/templates/about.html
@@ -19,9 +19,12 @@
     <div>
         <h1 align=center style="padding:10px;">About us</h1>
         <p style="padding: 10%">
-            We are students of Bharti Vidhyapeeth college of engineering. This produect is developed in VIPS 
-            in a VSIT Hackathon under then guidance of some of the most renowed mentors in the industry. 
+            We are students of Bharti Vidhyapeeth college of engineering. This produect is developed by us for the betterment of the people by providing them a free one step medical diagnostic solution. The code completely open sorced and is avaliable <a href="https://github.com/adi-797/Eye-BioAnalysis-OpenCV" style="color: blue" target="_blank"><b>here</b></a>
         </p>
+        <ul style='margin-left: 30%' align='center'>
+            <li style="font-size: 24px; color: grey"><i>Aditya Arora, BVCoE, New Delhi</i></li>
+            <li style="font-size: 24px; color: grey;margin-left: 20px;"><i>Mukul Anand, BVCoE, New Delhi</i></li>
+        </ul>
     </div>
 </body>
 </html>
