--- a/Ocular/webapp-django/django/templates/diagnosis_option.html
+++ b/Ocular/webapp-django/django/templates/diagnosis_option.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dashboard</title>
+    <title>Module select</title>
     <link rel="stylesheet" href="{% static 'css/dash.css' %}">
 </head>
 <body>
