--- a/Ocular/webapp-django/django/templates/direct_text.html
+++ b/Ocular/webapp-django/django/templates/direct_text.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="rightpane">
                     <form action="/app/camera/cholesterol/">
-                  <button class="Clickers" id="Button3">Colestrol</button>
+                  <button class="Clickers" id="Button3">Cholesterol</button>
               </form>
                 </div>
               </div>
